# trustseal

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
.claude/agents/: backend-architect.md  identity-trust-architect.md  security-engineer.md
.claude/commands/: checkpoint.md  module.md  quality.md  scaffold.md  spec.md
.claude/state/: completed.md  current.md  discrepancies.md
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit  pre-push  prepare-commit-msg
.github/workflows/: ci.yml
apps/admin-portal/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/admin-portal/src/__tests__/api/: client.test.ts
apps/admin-portal/src/__tests__/lib/: utils.test.ts
apps/admin-portal/src/__tests__/stores/: user-store.test.ts  workspace-store.test.ts
apps/admin-portal/src/app/: globals.css  layout.tsx
apps/admin-portal/src/app/(dashboard)/: page.tsx
apps/admin-portal/src/components/access-logs/: access-log-filters.tsx  access-log-table.tsx
apps/admin-portal/src/components/analytics/: analytics-overview.tsx  denial-reasons.tsx  entry-trends.tsx  peak-hours-chart.tsx
apps/admin-portal/src/components/dashboard/: access-chart.tsx  recent-activity.tsx  stats-cards.tsx  verifier-status.tsx
apps/admin-portal/src/components/layout/: header.tsx  sidebar.tsx  workspace-switcher.tsx
apps/admin-portal/src/components/residents/: add-resident-button.tsx  add-resident-dialog.tsx  resident-table-skeleton.tsx  resident-table.tsx
apps/admin-portal/src/components/settings/: settings-tabs.tsx
apps/admin-portal/src/components/ui/: badge.tsx  table-skeleton.tsx  toaster.tsx
apps/admin-portal/src/components/verifiers/: add-verifier-button.tsx  add-verifier-dialog.tsx  verifier-grid-skeleton.tsx  verifier-grid.tsx
apps/admin-portal/src/i18n/: config.ts  request.ts
apps/admin-portal/src/i18n/messages/: en.json  ms.json
apps/admin-portal/src/lib/: utils.ts
apps/admin-portal/src/lib/api/: access-logs.ts  analytics.ts  client.ts  residents.ts  verifiers.ts
apps/admin-portal/src/lib/providers/: query-provider.tsx
apps/admin-portal/src/lib/stores/: user-store.ts  workspace-store.ts
apps/guard-tablet/: .env.example  .eslintrc.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/guard-tablet/public/: manifest.json  sw.js
apps/guard-tablet/public/icons/: README.md
apps/guard-tablet/src/__tests__/: api.test.ts  setup.ts  stores.test.ts  utils.test.ts
apps/guard-tablet/src/app/: globals.css  layout.tsx  page.tsx
apps/guard-tablet/src/components/: header.tsx  offline-indicator.tsx
apps/guard-tablet/src/components/override/: override-dialog.tsx
apps/guard-tablet/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  (+1 more)
apps/guard-tablet/src/hooks/: use-offline.ts  use-override.ts  use-visitors.ts
apps/guard-tablet/src/i18n/: request.ts
apps/guard-tablet/src/lib/: utils.ts
apps/guest-web/: next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/guest-web/src/__tests__/: api.test.ts  setup.ts  stores.test.ts  utils.test.ts
apps/guest-web/src/app/: globals.css  layout.tsx  page.tsx
apps/guest-web/src/components/: completion-screen.tsx  footer.tsx  header.tsx  invite-card.tsx  registration-form.tsx  step-indicator.tsx  verification-step.tsx
apps/guest-web/src/lib/: utils.ts
apps/issuer-service/: Cargo.toml
apps/issuer-service/src/: main.rs
apps/platform-api/: Cargo.toml
apps/platform-api/src/: main.rs  state.rs
apps/platform-api/src/middleware/: mod.rs  rate_limit.rs  request_id.rs  tenant.rs
apps/platform-api/src/routes/: ekyc.rs  health.rs  mod.rs
apps/platform-api/src/services/: mod.rs
apps/platform-api/src/services/ekyc/: mod.rs  mydigital_id.rs  pkce.rs  store.rs  types.rs
apps/signing-service/: Cargo.toml
apps/signing-service/src/: auth.rs  main.rs  state.rs
apps/signing-service/src/domain/: ceremony.rs  mod.rs  signer.rs  state_machine.rs
apps/signing-service/src/orchestrator/: error.rs  mod.rs  service.rs
apps/signing-service/src/repository/: ceremony.rs  mod.rs  signer.rs  transition.rs
apps/signing-service/src/routes/: ceremonies.rs  mod.rs
apps/trustmark-web/: package.json
apps/verify-service/: Cargo.toml
apps/verify-service/src/: main.rs
apps/verify-web/: package.json
apps/wallet/: pubspec.yaml
apps/wallet/android/app/: build.gradle.kts
apps/wallet/ios/Runner/: KeystorePlugin.swift
apps/wallet/lib/: main.dart
apps/wallet/lib/app/: app.dart  router.dart
apps/wallet/lib/services/: auth_service.dart  ble_service.dart  crypto_service.dart  ekyc_service.dart  keystore_service.dart  nfc_service.dart  security_service.dart  sync_service.dart
apps/wallet/rust/: Cargo.toml
apps/wallet/rust/src/: lib.rs
apps/wallet/rust/src/api/: ble_payload.rs  crypto.rs  mod.rs  revocation.rs
docs/: CLAUDE_CODE_HANDOFF.md  EXHAUSTIVE_AUDIT_PHASE2.md  MASTER_PLAN.md  MYDIGITAL_TRACEABILITY_MATRIX.md  SECURITY_AUDIT_PHASE2.md  STRIDE_THREAT_MODEL.md
edge/verifier/: Cargo.toml
edge/verifier/src/: config.rs  main.rs
edge/verifier/src/audit/: log.rs  mod.rs
edge/verifier/src/ble/: advertiser.rs  gatt.rs  mod.rs  protocol.rs
edge/verifier/src/crypto/: did_resolver.rs  mod.rs  sd_jwt.rs
edge/verifier/src/hardware/: buzzer.rs  display.rs  gpio.rs  led.rs  mod.rs  tamper.rs
edge/verifier/src/mqtt/: client.rs  mod.rs
edge/verifier/src/nfc/: apdu.rs  mod.rs  reader.rs
edge/verifier/src/policy/: evaluator.rs  mod.rs  offline.rs  rules.rs
edge/verifier/src/revocation/: cache.rs  mod.rs  sync.rs
migrations/: 20260310000001_create_tenants.sql  20260311000001_identity_verifications.sql  20260311000002_signing_ceremonies.sql  20260311000003_oauth_sessions_nonce.sql
specs/: PHASE_MAP.md
tests/e2e/: admin-portal.spec.ts  api.spec.ts  guard-tablet.spec.ts  verification-flow.spec.ts
tests/k6/: platform-api.js  smoke.js
(+52 files in other folders)
