[workspace]
resolver = "2"
members = [
    "packages/sahi-core",
    "packages/crypto-engine",
    "apps/platform-api",
    "apps/issuer-service",
    "apps/signing-service",
    "apps/verify-service",
    "edge/verifier",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ring = "0.17"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
redis = { version = "0.27", features = ["tokio-comp"] }
async-trait = "0.1"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
