[package]
name = "platform-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
crypto-engine = { path = "../../packages/crypto-engine" }
