[package]
name = "signing-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
crypto-engine = { path = "../../packages/crypto-engine" }
sahi-core = { path = "../../packages/sahi-core" }
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
