[package]
name = "edge-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VaultPass edge verifier for Raspberry Pi - BLE/NFC credential verification"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

# Internal crates
crypto-engine = { path = "../../packages/crypto-engine" }
sahi-core = { path = "../../packages/sahi-core" }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = { workspace = true }

# Async runtime
futures = "0.3"
async-trait = { workspace = true }

# BLE (bluer - official BlueZ Rust bindings, requires D-Bus)
bluer = { version = "0.17", features = ["full"], optional = true }

# NFC (pcsc for smart card readers, requires pcsclite)
pcsc = { version = "2.8", optional = true }

# MQTT client
rumqttc = { version = "0.24", optional = true }

# UUID for BLE service identification
uuid = { version = "1.16", features = ["v4", "serde"] }

# Random for nonce generation
getrandom = "0.2"

# Local database for audit log
rusqlite = { version = "0.32", features = ["bundled"] }

# GPIO for Raspberry Pi
rppal = { version = "0.18", optional = true }

# Compression for status lists
flate2 = "1.0"

# Cryptographic hashing for SD-JWT
sha2 = "0.10"

# Signal handling
tokio-util = { version = "0.7", features = ["rt"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[features]
default = ["simulation"]
# Enable GPIO hardware control (requires Raspberry Pi)
rpi = ["rppal"]
# Enable BLE support (requires D-Bus/BlueZ)
ble-hardware = ["bluer"]
# Enable NFC support (requires pcsclite)
nfc-hardware = ["pcsc"]
# Enable MQTT support
mqtt = ["rumqttc"]
# Full hardware support (for production on Raspberry Pi)
full = ["rpi", "ble-hardware", "nfc-hardware", "mqtt"]
# Simulation mode for development (stubs for hardware)
simulation = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "edge-verifier"
path = "src/main.rs"
